--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    if resaurant['rating']\n",
+    "    if resaurant['rating']>alternative['ratin']\n",
     "    pass"
    ]
   },
