--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,8 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    if resaurant['rating']>alternative['ratin']\n",
+    "    if resaurant['rating']>alternative['rating']:\n",
+    "        return\n",
     "    pass"
    ]
   },
