--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
     "    if resaurant['rating']>alternative['rating']:\n",
     "        return restaurant['name']\n",
     "    else:\n",
-    "        return\n",
+    "        return alternative\n",
     "    pass"
    ]
   },
