--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,8 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    If len(restaurant['price'])<len(alternative)\n",
+    "    If len(restaurant['price'])<len(alternative['price']):\n",
+    "        retu\n",
     "    pass"
    ]
   },
