--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,9 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    If len(restaurant['price'])<len(alternative['price']):\n",
-    "        retu\n",
+    "        return restaurant\n",
+    "    else:\n",
+    "        \n",
     "    pass"
    ]
   },
