--- a/index.ipynb
+++ b/index.ipynb
@@ -189,15 +189,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-10-92c46778f468>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-92c46778f468>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    If len(restaurant['price'])<len(alternative['price']):\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    If len(restaurant['price'])<len(alternative['price']):\n",
     "        return restaurant\n",
     "    else:\n",
-    "        \n",
+    "        return alternative\n",
     "    pass"
    ]
   },
