Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
    ],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    If len(restaurant['price'])<len(alternative['price']):\n",
+    "    If len(restaurant['price']) < en(alternative['price']):\n",
     "        return restaurant\n",
     "    else:\n",
     "        return alternative\n",
