Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -189,21 +189,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-11-92c46778f468>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-12-0744568f134b>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-92c46778f468>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    If len(restaurant['price'])<len(alternative['price']):\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-0744568f134b>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    If len(restaurant['price']) < len(alternative['price']):\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    If len(restaurant['price']) < en(alternative['price']):\n",
+    "    If len(restaurant['price']) < len(alternative['price']):\n",
     "        return restaurant\n",
     "    else:\n",
     "        return alternative\n",
