--- a/index.ipynb
+++ b/index.ipynb
@@ -290,6 +290,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    open=[]\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed']==true:\n",
     "            return restaurant\n",
