Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "def open_restaurants(restaurants):\n",
     "    open=[]\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closed']==true:\n",
+    "        if not restaurant['is_closed']==true:\n",
     "            return restaurant\n",
     "    pass"
    ]
