--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "def open_restaurants(restaurants):\n",
     "    open=[]\n",
     "    for restaurant in restaurants:\n",
-    "        if not restaurant['is_closed']\n",
+    "        if not restaurant['is_closed']:\n",
     "            return restaurant\n",
     "    pass"
    ]
