--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
     "    open=[]\n",
     "    for restaurant in restaurants:\n",
     "        if not restaurant['is_closed']:\n",
-    "            open.append\n",
+    "            open.append(restaurant)\n",
     "    pass"
    ]
   },
