Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
     "    for restaurant in restaurants:\n",
     "        if not restaurant['is_closed']:\n",
     "            open.append(restaurant)\n",
-    "        \n",
+    "        return open\n",
     "    pass"
    ]
   },
